nginx/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jennie
---
apiVersion: v1
kind: Namespace
metadata:
  name: thecat
