nginx/ingress-2.yml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-todo-ingress
  namespace: webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /nginx(/|$)(.*)
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

          - pathType: Prefix
            path: /app(/|$)(.*)
            backend:
              service:
                name: todo-list-service
                port:
                  number: 5173
